--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,18 @@
-name: Fetch OKX & Deploy Site
-
-
-on:
-push:
-branches: [ main ]
-schedule:
-- cron: '*/5 * * * *' # 每 5 分钟运行一次（可按需修改）
-workflow_dispatch: {}
-
-
-jobs:
-build-and-deploy:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
 - name: Setup Node
 uses: actions/setup-node@v4
 with:
-node-version: '20'
+node-version: 20
+
+
 - name: Install deps
-run: npm ci
-- name: Run fetch + build
+run: npm install
+
+
+- name: Build
 run: node scripts/fetch_and_build.js
-- name: Deploy to GitHub Pages
+
+
+- name: Deploy to GH Pages
 uses: peaceiris/actions-gh-pages@v4
 with:
 github_token: ${{ secrets.GITHUB_TOKEN }}
